--- a/sass/style.css
+++ b/sass/style.css
@@ -1,4 +1,3 @@
-/****** General ***********/
 body {
   margin: 0;
 }
@@ -10,6 +9,420 @@ body a {
   text-decoration: none;
   color: inherit;
 }
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.header .header__logo {
+  height: 63px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header .header__logo .header__back-button {
+  position: absolute;
+  left: 17px;
+  color: #353535;
+  font-size: 20px;
+}
+.header .header__logo img {
+  height: 44px;
+  width: 65%;
+  padding-top: 10px;
+}
+.header .location {
+  width: 100%;
+  height: 50px;
+  background-color: #EAEAEA;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header .location span {
+  padding-left: 15px;
+  font-family: "Roboto", sans-serif;
+}
+
+@media (min-width: 1024px) {
+  .header .header__logo {
+    height: 96.34px;
+  }
+  .header .header__logo img {
+    padding: 0;
+    width: 100%;
+    height: 34.2px;
+  }
+}
+@media (min-width: 1440px) {
+  .header .header__logo {
+    position: relative;
+  }
+  .header .header__logo .header__back-button {
+    left: -600px;
+  }
+}
+.footer {
+  background-color: #353535;
+  color: white;
+  padding: 0 25px;
+}
+.footer .footer_title {
+  font-family: "Shrikhand";
+  font-size: 18px;
+  font-weight: 400;
+  padding: 20px 0;
+  margin: 0;
+}
+.footer .footer_list {
+  margin: 0;
+  gap: 7px;
+}
+.footer .footer_list li {
+  padding-bottom: 15px;
+  font-weight: 500;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+}
+.footer .footer_list li i {
+  padding-right: 10px;
+}
+.footer .footer_list li .fa-utensils {
+  font-size: 14px;
+}
+.footer .footer_list li .fa-handshake-angle {
+  font-size: 10px;
+}
+.footer .footer_list .footer_last_links {
+  font-weight: 400;
+}
+
+@media (min-width: 1024px) {
+  .footer {
+    display: flex;
+    justify-content: right;
+    flex-direction: row-reverse;
+    gap: 16px;
+    height: 54px;
+    align-items: end;
+    padding: 30px 25px 30px 25px;
+  }
+  .footer .footer_title {
+    font-size: 18px;
+    font-weight: 400;
+    padding: 0 50px 0 30px;
+    height: 27px;
+  }
+  .footer .footer_list {
+    display: flex;
+    min-width: 661px;
+    justify-content: left;
+  }
+  .footer .footer_list li {
+    padding: 0 5px;
+  }
+  .footer .footer_list li i {
+    padding-right: 12px;
+  }
+  .footer .footer_list li .fa-handshake-angle {
+    font-size: 12px;
+  }
+  .footer .footer_list li:nth-child(3) {
+    padding-left: 30px;
+  }
+}
+main {
+  background-color: #F6F6F6;
+  padding-bottom: 50px;
+}
+
+/* Desktop & Medium devices (tablets, more/equal than 1024px) */
+@media (min-width: 1024px) {
+  main {
+    padding-bottom: 0;
+  }
+}
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+  background-color: white;
+  margin-bottom: 20px;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
+  font-family: "Roboto", sans-serif;
+  max-width: 490px;
+}
+.card .card_tag {
+  position: absolute;
+  background-color: #99E2D0;
+  height: 29px;
+  width: 24%;
+  max-width: 80px;
+  top: 13px;
+  right: 13px;
+  font-weight: 500;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: green;
+}
+.card .card_image {
+  object-fit: cover;
+  height: 124px;
+  border-radius: 20px 20px 0px 0px;
+  border: 5px;
+}
+.card .card-content {
+  padding: 10px 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.card .card-content .card-title {
+  font-size: 18px;
+  margin-top: 10px;
+  margin-bottom: 4px;
+  font-weight: 700;
+}
+.card .card-content .card-subtitle {
+  font-size: 17px;
+  font-weight: 300;
+  margin: 5px 0;
+}
+
+.menu .menu__page__image {
+  height: 275px;
+  width: 100%;
+}
+.menu .menu__header {
+  position: relative;
+  top: -40px;
+  background-color: #F6F6F6;
+  border-top-right-radius: 40px;
+  border-top-left-radius: 40px;
+  display: flex;
+  padding-left: 13px;
+  padding-top: 30px;
+  height: 10px;
+}
+.menu .menu__header .menu__title {
+  font-family: "Shrikhand";
+  font-weight: 400;
+  font-size: 28px;
+  margin: 0;
+}
+.menu .menu__header .icon-button {
+  position: absolute;
+  padding-top: 5px;
+  right: 40px;
+}
+.menu .menu__body {
+  display: flex;
+  flex-direction: column;
+  padding: 0 13px;
+  background-color: #F6F6F6;
+  gap: 40px;
+}
+.menu .menu__body > * {
+  opacity: 0;
+}
+.menu .menu__body > *:nth-child(1) {
+  animation: fadeIn 3s ease-in-out 0.4s forwards;
+}
+.menu .menu__body > *:nth-child(2) {
+  animation: fadeIn 3s ease-in-out 0.8s forwards;
+}
+.menu .menu__body > *:nth-child(3) {
+  animation: fadeIn 3s ease-in-out 1.2s forwards;
+}
+.menu .menu__body > *:nth-child(4) {
+  animation: fadeIn 3s ease-in-out 1.6s forwards;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.menu .menu__body section {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+.menu .menu__body section .section_title {
+  position: relative;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  padding-bottom: 10px;
+  margin-bottom: 0;
+}
+.menu .menu__body section .section_title::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 40px;
+  height: 3px;
+  background-color: #99E2D0;
+}
+@keyframes checkmark-in {
+  0% {
+    width: 0;
+    opacity: 0;
+  }
+  100% {
+    width: 17%;
+    opacity: 1;
+  }
+}
+@keyframes checkmark-out {
+  0% {
+    width: 17%;
+    opacity: 1;
+  }
+  100% {
+    width: 0;
+    opacity: 0;
+  }
+}
+.menu .menu__body .checkmark {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0 15px 15px 0;
+  right: 0;
+  top: 0;
+  width: 0;
+  height: 100%;
+  background-color: #99E2D0;
+  text-align: center;
+  animation: checkmark-out 1s forwards;
+  max-width: 59px;
+}
+.menu .menu__body .checkmark i {
+  color: white;
+  font-size: 20px;
+}
+.menu .menu__body .card {
+  padding-right: 5px;
+  transition: padding-right 1s ease-in-out;
+  height: 69px;
+  justify-content: center;
+  padding: 0 15px;
+  margin-bottom: 0;
+  border-radius: 15px;
+  max-width: 634px;
+}
+.menu .menu__body .card .card-content {
+  padding: 0;
+}
+.menu .menu__body .card .card-content .card-txt {
+  transition: width 1s ease-in-out;
+  width: 100%;
+}
+.menu .menu__body .card .card-content .card-txt .card-title {
+  font-weight: 500;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.menu .menu__body .card .card-content .card-txt .card-subtitle {
+  font-weight: 300;
+  font-size: 15px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.menu .menu__body .card .card-content .card-price {
+  padding-top: 20px;
+  font-weight: 700;
+  font-size: 15.04px;
+}
+.menu .menu__body .card:hover {
+  padding-right: 70px;
+}
+.menu .menu__body .card:hover .card-txt {
+  width: 80%;
+}
+.menu .menu__body .card:hover .checkmark {
+  animation: checkmark-in 2.5s forwards;
+  max-width: 59px;
+}
+.menu .menu__body .command_action {
+  display: flex;
+  justify-content: center;
+}
+.menu .menu__body .command_action .action_button {
+  margin: 0;
+  width: 53%;
+  height: 50px;
+  padding: 0;
+  max-width: 186px;
+}
+
+/* Small & Medium devices (mobiles, tablets, more/equal than 540px and less/equal than 1023px) */
+@media screen and (min-width: 540px) and (max-width: 1023px) {
+  .menu .menu__container .menu__header {
+    justify-content: center;
+  }
+  .menu .menu__container .menu__header .icon-button {
+    position: relative;
+    padding-left: 90px;
+  }
+}
+@media screen and (min-width: 690px) and (max-width: 1023px) {
+  .menu .menu__body .card:hover {
+    padding-right: 16px;
+  }
+}
+@media (min-width: 1024px) {
+  .menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+  }
+  .menu .menu__page__image {
+    object-fit: cover;
+    max-width: 1440px;
+    width: 100%;
+    height: 383px;
+  }
+  .menu .menu__container {
+    max-width: 1055px;
+    width: 100%;
+    background-color: #F6F6F6;
+  }
+  .menu .menu__header {
+    justify-content: center;
+    padding-top: 50px;
+  }
+  .menu .menu__header .menu__title {
+    padding-right: 50px;
+  }
+  .menu .menu__header .icon-button {
+    position: relative;
+    padding-left: 40px;
+  }
+  .menu .menu__body {
+    padding-left: 210.5px;
+    padding-right: 210.5px;
+    padding-top: 20px;
+    gap: 30px;
+  }
+  .menu .menu__body .command_action {
+    padding-bottom: 40px;
+    padding-top: 15px;
+  }
+}
+/****** General ***********/
 body .loading {
   width: 100%;
   height: 100%;
@@ -32,48 +445,6 @@ body .loading .loading-image {
     opacity: 0;
     visibility: hidden;
   }
-}
-body .header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-body .header .header__logo {
-  height: 63px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-body .header .header__logo .header__back-button {
-  position: absolute;
-  left: 17px;
-  color: #353535;
-  font-size: 20px;
-}
-body .header .header__logo img {
-  height: 44px;
-  width: 65%;
-  padding-top: 10px;
-}
-body .header .location {
-  width: 100%;
-  height: 50px;
-  background-color: #EAEAEA;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-body .header .location span {
-  padding-left: 15px;
-  font-family: "Roboto", sans-serif;
-}
-body main {
-  background-color: #F6F6F6;
-  padding-bottom: 50px;
-}
-body main .menu__page__image {
-  height: 275px;
-  width: 100%;
 }
 body main .presentation {
   display: flex;
@@ -142,227 +513,9 @@ body main .fonctionnement .fonctionnement_list li i {
 body main .fonctionnement .fonctionnement_list li .fa-store {
   color: #9356DC;
 }
-body main .card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  border-radius: 20px;
-  background-color: white;
-  margin-bottom: 20px;
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
-  font-family: "Roboto", sans-serif;
-  max-width: 490px;
-}
-body main .card .card_tag {
-  position: absolute;
-  background-color: #99E2D0;
-  height: 29px;
-  width: 24%;
-  max-width: 80px;
-  top: 13px;
-  right: 13px;
-  font-weight: 500;
-  font-size: 14px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: green;
-}
-body main .card .card_image {
-  object-fit: cover;
-  height: 124px;
-  border-radius: 20px 20px 0px 0px;
-  border: 5px;
-}
-body main .card .card-content {
-  padding: 10px 15px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-body main .card .card-content .card-title {
-  font-size: 18px;
-  margin-top: 10px;
-  margin-bottom: 4px;
-  font-weight: 700;
-}
-body main .card .card-content .card-subtitle {
-  font-size: 17px;
-  font-weight: 300;
-  margin: 5px 0;
-}
-body main .card .card-content .card-price {
-  padding-top: 20px;
-  font-weight: 700;
-  font-size: 15.04px;
-}
-@keyframes checkmark-in {
-  0% {
-    width: 0;
-    opacity: 0;
-  }
-  100% {
-    width: 17%;
-    opacity: 1;
-  }
-}
-@keyframes checkmark-out {
-  0% {
-    width: 17%;
-    opacity: 1;
-  }
-  100% {
-    width: 0;
-    opacity: 0;
-  }
-}
-body main .card .checkmark {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 0 15px 15px 0;
-  right: 0;
-  top: 0;
-  width: 0;
-  height: 100%;
-  background-color: #99E2D0;
-  text-align: center;
-  animation: checkmark-out 1s forwards;
-  max-width: 59px;
-}
-body main .card .checkmark i {
-  color: white;
-  font-size: 20px;
-}
 body main .restaurants {
   padding: 20px 20px 0 20px;
   font-family: "Roboto", sans-serif;
-}
-body main .menu .menu__header {
-  position: relative;
-  top: -40px;
-  background-color: #F6F6F6;
-  border-top-right-radius: 40px;
-  border-top-left-radius: 40px;
-  display: flex;
-  padding-left: 13px;
-  padding-top: 30px;
-  height: 10px;
-}
-body main .menu .menu__header .menu__title {
-  font-family: "Shrikhand";
-  font-weight: 400;
-  font-size: 28px;
-  margin: 0;
-}
-body main .menu .menu__header .icon-button {
-  position: absolute;
-  padding-top: 5px;
-  right: 40px;
-}
-body main .menu .menu__body {
-  display: flex;
-  flex-direction: column;
-  padding: 0 13px;
-  background-color: #F6F6F6;
-  gap: 40px;
-}
-body main .menu .menu__body > * {
-  opacity: 0;
-}
-body main .menu .menu__body > *:nth-child(1) {
-  animation: fadeIn 3s ease-in-out 0.4s forwards;
-}
-body main .menu .menu__body > *:nth-child(2) {
-  animation: fadeIn 3s ease-in-out 0.8s forwards;
-}
-body main .menu .menu__body > *:nth-child(3) {
-  animation: fadeIn 3s ease-in-out 1.2s forwards;
-}
-body main .menu .menu__body > *:nth-child(4) {
-  animation: fadeIn 3s ease-in-out 1.6s forwards;
-}
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-body main .menu .menu__body section {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-}
-body main .menu .menu__body section .section_title {
-  position: relative;
-  font-family: "Roboto", sans-serif;
-  font-weight: 300;
-  font-size: 16px;
-  padding-bottom: 10px;
-  margin-bottom: 0;
-}
-body main .menu .menu__body section .section_title::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 40px;
-  height: 3px;
-  background-color: #99E2D0;
-}
-body main .menu .menu__body .card {
-  padding-right: 5px;
-  transition: padding-right 1s ease-in-out;
-  height: 69px;
-  justify-content: center;
-  padding: 0 15px;
-  margin-bottom: 0;
-  border-radius: 15px;
-  max-width: 634px;
-}
-body main .menu .menu__body .card .card-content {
-  padding: 0;
-}
-body main .menu .menu__body .card .card-content .card-txt {
-  transition: width 1s ease-in-out;
-  width: 100%;
-}
-body main .menu .menu__body .card .card-content .card-txt .card-title {
-  font-weight: 500;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-body main .menu .menu__body .card .card-content .card-txt .card-subtitle {
-  font-weight: 300;
-  font-size: 15px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-body main .menu .menu__body .card:hover {
-  padding-right: 70px;
-}
-body main .menu .menu__body .card:hover .card-txt {
-  width: 80%;
-}
-body main .menu .menu__body .card:hover .checkmark {
-  animation: checkmark-in 2.5s forwards;
-  max-width: 59px;
-}
-body main .menu .menu__body .command_action {
-  display: flex;
-  justify-content: center;
-}
-body main .menu .menu__body .command_action .action_button {
-  margin: 0;
-  width: 53%;
-  height: 50px;
-  padding: 0;
-  max-width: 186px;
 }
 body main .icon-button {
   position: relative;
@@ -427,40 +580,6 @@ body main .action_button div {
   position: relative;
   z-index: 2;
 }
-body .footer {
-  background-color: #353535;
-  color: white;
-  padding: 0 25px;
-}
-body .footer .footer_title {
-  font-family: "Shrikhand";
-  font-size: 18px;
-  font-weight: 400;
-  padding: 20px 0;
-  margin: 0;
-}
-body .footer .footer_list {
-  margin: 0;
-  gap: 7px;
-}
-body .footer .footer_list li {
-  padding-bottom: 15px;
-  font-weight: 500;
-  font-size: 16px;
-  font-family: "Roboto", sans-serif;
-}
-body .footer .footer_list li i {
-  padding-right: 10px;
-}
-body .footer .footer_list li .fa-utensils {
-  font-size: 14px;
-}
-body .footer .footer_list li .fa-handshake-angle {
-  font-size: 10px;
-}
-body .footer .footer_list .footer_last_links {
-  font-weight: 400;
-}
 
 /****** Media queries ***********/
 /* Small & Medium devices (mobiles, tablets, more/equal than 540px) */
@@ -493,16 +612,6 @@ body .footer .footer_list .footer_last_links {
     padding: 10px 25px 10px 20px;
   }
 }
-/* Small & Medium devices (mobiles, tablets, more/equal than 540px and less/equal than 1023px) */
-@media screen and (min-width: 540px) and (max-width: 1023px) {
-  main .menu .menu__container .menu__header {
-    justify-content: center;
-  }
-  main .menu .menu__container .menu__header .icon-button {
-    position: relative;
-    padding-left: 90px;
-  }
-}
 /* Small & Medium devices (mobiles, tablets, more/equal than 540px and less/equal than 1069px) */
 @media screen and (min-width: 540px) and (max-width: 1069px) {
   .restaurants div .restaurants__cards {
@@ -512,17 +621,6 @@ body .footer .footer_list .footer_last_links {
 }
 /* Desktop & Medium devices (tablets, more/equal than 1024px) */
 @media (min-width: 1024px) {
-  body .header .header__logo {
-    height: 96.34px;
-  }
-  body .header .header__logo img {
-    padding: 0;
-    width: 100%;
-    height: 34.2px;
-  }
-  body main {
-    padding-bottom: 0;
-  }
   body main .presentation br {
     display: none;
   }
@@ -552,78 +650,8 @@ body .footer .footer_list .footer_last_links {
   body main .fonctionnement div .fonctionnement_list li {
     width: 100%;
   }
-  body main .menu {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
-  }
-  body main .menu .menu__page__image {
-    object-fit: cover;
-    max-width: 1440px;
-    width: 100%;
-    height: 383px;
-  }
-  body main .menu .menu__container {
-    max-width: 1055px;
-    width: 100%;
-    background-color: #F6F6F6;
-  }
-  body main .menu .menu__header {
-    justify-content: center;
-    padding-top: 50px;
-  }
-  body main .menu .menu__header .menu__title {
-    padding-right: 50px;
-  }
-  body main .menu .menu__header .icon-button {
-    position: relative;
-    padding-left: 40px;
-  }
-  body main .menu .menu__body {
-    padding-left: 210.5px;
-    padding-right: 210.5px;
-    padding-top: 20px;
-    gap: 30px;
-  }
-  body main .menu .menu__body .command_action {
-    padding-bottom: 40px;
-    padding-top: 15px;
-  }
   body main .action_button {
     max-width: 218px;
-  }
-  body .footer {
-    display: flex;
-    justify-content: right;
-    flex-direction: row-reverse;
-    gap: 16px;
-    height: 54px;
-    align-items: end;
-    padding: 30px 25px 30px 25px;
-  }
-  body .footer .footer_title {
-    font-size: 18px;
-    font-weight: 400;
-    padding: 0 50px 0 30px;
-    height: 27px;
-  }
-  body .footer .footer_list {
-    display: flex;
-    min-width: 661px;
-    justify-content: left;
-  }
-  body .footer .footer_list li {
-    padding: 0 5px;
-  }
-  body .footer .footer_list li i {
-    padding-right: 12px;
-  }
-  body .footer .footer_list li .fa-handshake-angle {
-    font-size: 12px;
-  }
-  body .footer .footer_list li:nth-child(3) {
-    padding-left: 30px;
   }
 }
 
